text overflow, panel clicking and image margin issue fixed

--- a/assets/css/base/main.css
+++ b/assets/css/base/main.css
@@ -332,7 +332,7 @@ footer {
             transition: all .25s ease-out;
   }
   .big {
-  font-size: 60px !important; 
+  font-size: 50px !important; 
 }
   .wlim {
     max-width: 80%;
@@ -515,14 +515,23 @@ $mint: #16a085;
     padding-right: 10px;
 }
 
+.avatar-img {
+  max-height: 200px !important;
+}
+
 .panel-default{
   margin-top: 25px;
 }
 
 .panel-body{
-    padding: 10px;
+    padding: 5px;
 }
-
+.col-xs-9 {
+  word-wrap: break-word !important; 
+}
+.col-xs-10 {
+  word-wrap: break-word !important; 
+}
 .first-navigation-dropdown{
     display: block;
     margin-top: -7px;
